add more button styles from tailwind to start, add nodemon config, update button api

--- a/examples/radui/public/theme.scss
+++ b/examples/radui/public/theme.scss
@@ -1,3 +1,10 @@
+:root {
+	// --clr-primary-bg: #00aaff;
+	// --clr-primary-fg: #ffffff;
+	// --clr-secondary-bg: #ebf8ff;
+	// --clr-secondary-fg: #333333;
+}
+
 html {
 	font-size: var(--font-size);
 	font-family: var(--font-sans);
