--- a/packages/radui/css/styles.css
+++ b/packages/radui/css/styles.css
@@ -45,9 +45,32 @@
 	--p-sm: var(--leading-xs);
 	--p-base: var(--leading-base);
 
-	/* colors */
-	--clr-primary-bg: #4299e1;
+	/* border radius */
+	--rounded-base: 0.25rem;
+
+	/* colors applied */
+	--clr-primary-bg: #5850ec;
+	--clr-primary-border: transparent;
+	--clr-primary-bg-hover: #6875f5;
+	--clr-primary-bg-active: #5145cd;
+	--clr-primary-border-active: #b4c6ff;
 	--clr-primary-fg: #ffffff;
-	--clr-secondary-bg: #ebf8ff;
-	--clr-secondary-fg: #333333;
+	--clr-primary-fg-hover: #ffffff;
+	--clr-primary-shadow-active: 0 0 0 0.176rem rgba(180, 198, 252, 0.45);
+	--clr-secondary-bg: #e5edff;
+	--clr-secondary-border: transparent;
+	--clr-secondary-bg-hover: #f0f5ff;
+	--clr-secondary-bg-active: #cddbfe;
+	--clr-secondary-border-active: #b4c6fc;
+	--clr-secondary-fg: #5145cd;
+	--clr-secondary-fg-hover: #5145cd;
+	--clr-secondary-shadow-active: 0 0 0 0.176rem rgba(180, 198, 252, 0.45);
+	--clr-tertiary-bg: #ffffff;
+	--clr-tertiary-border: #d2d6dc;
+	--clr-tertiary-bg-hover: #ffffff;
+	--clr-tertiary-bg-active: #ffffff;
+	--clr-tertiary-border-active: #d2d6dc;
+	--clr-tertiary-fg: #374151;
+	--clr-tertiary-fg-hover: #6b7280;
+	--clr-tertiary-shadow-active: 0 0 0 0.176rem rgba(180, 198, 252, 0.45);
 }
